--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -140,5 +140,56 @@ body {
 	width: 100%;
 }
 
+.book {
+	height: 100%;
+}
+
+.book .book-title {
+	color: #000;
+}
+
+.book .book-title .book-author {
+	font-size: 0.9em;
+	color: #666;
+}
+
+.book .reader {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.book .reader .btn-page {
+	height: 100%;
+	width: 10%;
+	position: absolute;
+	top: 0px;
+	text-align: center;
+	font-size: 2em;
+	color: #fff;
+	text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+	padding-top: 30%;
+	cursor: pointer;
+	opacity: 0.5;
+}
+
+.book .reader .btn-page:hover {
+	background: #eee;
+	opacity: 1;
+}
+
+.book .reader .btn-page.prev {
+	left: 0px;
+}
+
+.book .reader .btn-page.next {
+	right: 0px;
+}
+
+.book .reader #epubReader {
+	padding: 10px 10%;
+	width: 100%;
+	height: 100%;
+}
 
 
