added book data and edited some markupcss

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -119,6 +119,7 @@ body {
 
 .item .item-cover {
 	width: 100%;
+	cursor: pointer;
 }
 
 .item .item-title {
@@ -135,9 +136,29 @@ body {
 	color: #666;
 }
 
-.item .btn-success {
+.item .item-btn-read {
+	display: block;
 	margin: 5px auto 0px auto;
+	padding: 10px 0px;
 	width: 100%;
+	border: solid 1px #a5c956;
+	text-transform: uppercase;
+	cursor: pointer;
+	border-radius: 3px;
+	color: #444;
+	font-weight: bold;
+
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cdeb8e+0,a5c956+100;Green+3D+%232 */
+	background: #cdeb8e; /* Old browsers */
+	background: -moz-linear-gradient(top, #cdeb8e 0%, #a5c956 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cdeb8e), color-stop(100%,#a5c956)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #cdeb8e 0%,#a5c956 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #cdeb8e 0%,#a5c956 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #cdeb8e 0%,#a5c956 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #cdeb8e 0%,#a5c956 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=0 ); /* IE6-9 */
+	copy
+
 }
 
 .book {
