--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ body {
 
 .book .book-title {
 	color: #000;
+	font-size: 1.25em;
 }
 
 .book .book-title .book-author {
@@ -181,7 +182,7 @@ body {
 }
 
 .book .reader .btn-page {
-	height: 100%;
+	height: 95%;
 	width: 10%;
 	position: absolute;
 	top: 0px;
