--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ html {
 
 body {
 	background: #0079BF;
+	padding-top: 40px;
 }
 
 #header {
@@ -25,6 +26,10 @@ body {
 	color: #fff;
 	height: 40px;
 	padding: 5px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
 }
 
 #header .header-brand {
