--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ table.item td {
 }
 
 .book {
-	height: 100%;
+	/*height: 100%;*/
 }
 
 .book .book-title {
@@ -322,7 +322,6 @@ table.item td {
 }
 
 .book .book-cover {
-	height: 225px;
 	width: 150px;
 	margin: 0px 10px 10px 0px;
 	overflow: hidden;
@@ -332,9 +331,6 @@ table.item td {
 
 .book .book-cover img {
 	width: 100%;
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
 }
 
 .book .book-quotes {
@@ -447,6 +443,18 @@ table.item td {
   		bottom: 4%;
   	}
 
+  	.lightbox-content {
+  		top: auto;
+  		transform: none;
+
+  	}
+
+  	.lightbox-summary .lightbox-content {
+  		width: 50%;
+  		height: 100%;
+  		overflow: scroll;
+  	}
+
 }
 
 
@@ -468,17 +476,28 @@ lightbox styles
 	display: none;
 }
 
-.lightbox-content {
+.lightbox-container {
 	position: fixed;
-	top: 0px;
-	bottom: 0px;
 	width: 100%;
 	height: 100%;
+	top: 0px;
+	bottom: 0px;
 	left: 0px;
 	right: 0px;
-	background-color: #fff;
+	background: transparent;
 	z-index: 101;
+}
+
+.lightbox-content {
+	position: relative;
+	margin: auto;
+	background-color: #fff;
 	padding: 10px;
+	border-radius: 3px;
+	top: 50%;
+  	-webkit-transform: translateY(-50%);
+ 	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
 }
 
 .lightbox-btn-close {
@@ -504,7 +523,23 @@ lightbox styles
 
 .lightbox-summary .lightbox-content {
 	width: 500px;
-	height: 420px;
-	margin: auto;
-	border-radius: 3px;
+}
+
+.lightbox-summary .book {
+
+}
+
+@media (max-width: 600px) {
+
+  	.lightbox-content {
+  		top: auto;
+  		transform: none;
+  	}
+
+  	.lightbox-summary .lightbox-content {
+  		width: 100%;
+  		height: 100%;
+  		overflow: scroll;
+  	}
+
 }
