--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ html {
   box-sizing: border-box;
   font-size: 16px;
   font-family: Helvetica, Arial, 'Sans Serif';
+  color: #333;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -24,6 +25,12 @@ body {
 h2 {
 	margin: 0px;
 	font-size: 1.5em;
+	font-weight: bold;
+}
+
+h3 {
+	margin: 0px;
+	font-size: 1.25em;
 	font-weight: bold;
 }
 
@@ -213,7 +220,7 @@ strong {
 	overflow: hidden;
 	display: inline-block;
 	position: relative;
-	padding-bottom: 30px;
+	padding-bottom: 10px;
 }
 
 .shelf:first-child {
@@ -226,7 +233,7 @@ strong {
 }*/
 
 .shelf .shelf-info {
-	margin-bottom: 15px;
+	margin-bottom: 0px;
 	overflow: hidden;
 	white-space: nowrap;
 }
@@ -592,6 +599,21 @@ table.item td {
 		margin: 20px 0px 0px 0px;
 	}
 }
+
+
+/*
+	listing layout
+*/
+
+.listing .landing-promo {
+	padding: 20px;
+	padding-bottom: 0px;
+}
+
+.listing .landing-promo p {
+	margin-top: 10px;
+}
+
 
 
 /*
