--- a/css/styles.css
+++ b/css/styles.css
@@ -415,6 +415,37 @@ table.item td {
 	right: 10px;
 }
 
+.item .item-cover .action-icon.author-quote {
+	left: 10px;
+	padding: 5px;
+}
+
+.item .item-cover .item-quote-content {
+	position: absolute;
+	background: #ccc;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	padding: 15px;
+}
+
+.item .item-cover .item-quote-content .item-quote-quote {
+	text-align: left;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+.item .item-cover .item-quote-content .item-quote-quoted {
+	text-align: right;
+	font-size: 0.9em;
+	font-weight: bold;
+}
+
+/*.item .item-cover .action-icon.author-quote svg {
+	width: 80%;
+}*/
+
 .book {
 	/*height: 100%;*/
 }
@@ -451,8 +482,8 @@ table.item td {
 .book .book-quotes {
 	padding-top: 10px;
 	font-size: 0.85em;
-	clear: both;
 	min-height: 80px;
+	margin-bottom: 10px;
 }
 
 .quote {
@@ -519,6 +550,10 @@ table.item td {
 
 .quote-noimage .quote-author {
 	text-align: right;
+}
+
+.book .book-ctas {
+	clear: both;
 }
 
 .book .reader {
