--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ strong {
 	width: 40px;
 	height: 40px;
 	border-radius: 20px;
+	border: solid 2px #fff;
 	background: #57afc9;
 	cursor: pointer;
 	padding: 5px;
@@ -418,11 +419,20 @@ table.item td {
 
 .item .item-cover .action-icon.author-quote {
 	left: 10px;
+	border-style: dotted;
+}
+
+.item .item-cover .action-icon.author-quote.active {
+	border-style: solid;
+}
+
+.item .item-cover .item-quote {
+	background: #fff url('../img/clean-gray-paper.png') repeat; /* pre-load the bg image */
 }
 
 .item .item-cover .item-quote-content {
 	position: absolute;
-	background: #ccc;
+	background: #fff url('../img/clean-gray-paper.png') repeat;
 	width: 100%;
 	height: 100%;
 	top: 0px;
