--- a/css/styles.css
+++ b/css/styles.css
@@ -435,6 +435,14 @@ table.item td {
 	border-style: solid;
 }
 
+.item .item-cover .action-icon.add-to-list {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	left: 50%;
+	margin-left: -25px; /*center based on icon width */
+}
+
 .item .item-cover .item-quote {
 	background: #fff url('../img/clean-gray-paper.png') repeat; /* pre-load the bg image */
 }
