--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,14 @@ body {
 	padding-top: 40px;	/*this is for the 40px fixed header*/
 }
 
+h1 {
+	margin: 0px;
+	font-size: 2.25em;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-weight: normal;
+	color: #4d4d4d;
+}
+
 h2 {
 	margin: 0px;
 	font-size: 1.5em;
